port with AI